--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,15 @@
   <script src="https://kit.fontawesome.com/60047068a8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style/dashboard.css">
   <title>URL Shortener | Home</title>
+  <script>
+    const token = localStorage.getItem('token');
+    if(!token) {
+      window.location.href='./login.html';
+    }
+  </script>
 </head>
 <body>
-  <a class="logout" href="http://localhost:3000/api/v1/auth/logout">logout</a>
+  <a class="logout" href="https://url-shortener-y7no.onrender.com/api/v1/auth/logout">logout</a>
   <p>create your free and custom shortcuts!</p>
   <main>
     <section>
