change domain domain to vercel url

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
       <form class="card">
         <input type="text" id="url" placeholder="Url"><br>
         <div>
-          <span class="domain">http://localhost:3000</span>
+          <span class="domain">https://url-shortener-y7no.onrender.com</span>
           <span class="slash">/</span>
           <input type="text" id="pathname" placeholder="Pathname">
         </div>
