add hidden visibility to errorCard

--- a/client/index.html
+++ b/client/index.html
@@ -40,5 +40,11 @@
   <script src="js/updateShortcut.js" type="module"></script>
   <script src="js/copyShortcut.js" type="module"></script>
   <script src="js/logout.js"></script>
+  <script>
+    const errorCard = document.querySelector('.error');
+    window.onclick = () => {
+      errorCard.style.visibility = 'hidden';
+    }
+  </script>
 </body>
 </html>
