--- a/client/login.html
+++ b/client/login.html
@@ -22,7 +22,7 @@
     <a class="forget-password" href="#">forget password?</a>
     <div class="error">error</div>
     <button type="submit" id="login">login</button>
-    <p>not a member yet? <a href="/register.html">register!</a></p>
+    <p>not a member yet? <a href="./register.html">register!</a></p>
   </form>
   <script src="js/login.js" type="module"></script>
 </body>
