--- a/client/register.html
+++ b/client/register.html
@@ -27,7 +27,7 @@
     <div class="error">error</div>
     <button type="submit" id="register">register</button>
     <!-- <p>not a member yet? <a href="#">register!</a></p> -->
-    <p>Already a member? <a href="/login.html">login!</a></p>
+    <p>Already a member? <a href="./login.html">login!</a></p>
   </form>
   <script src="js/register.js" type="module"></script>
 </body>
